--- a/Python/FirstProgram.ipynb
+++ b/Python/FirstProgram.ipynb
@@ -55,14 +55,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "df2048f5",
       "metadata": {
-        "id": "df2048f5"
+        "id": "df2048f5",
+        "outputId": "9797a5d1-51d5-40e8-9604-fc6859b9453e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Madhuri\n"
+          ]
+        }
+      ],
       "source": [
-        " "
+        " print('Madhuri')"
       ]
     }
   ],
